# aviabox_2025

./: __init__.py  main.py
communications/: Communications Tests.ps1  __init__.py  compression.py  data_link.py  encryption.py  network_manager.py  protocol_handler.py
communications/edge_ai/: __init__.py  edge_ai_for_object_detection.py  fhss_implementation.cpp  inference_optimizer.py  model_quantization.py  real-time_network_monitoring.py  rf_signal_analysis_with_gnu_radio.py  sensor_fusion_with_kalman_filter.py
communications/tests/: test_data_link.py  test_edge_ai.py  test_network_manager.py
gnfcs/: data_loader.py  evaluator.py  pinn.py  predictive_path_controller.py  rl_agent.py  trainer.py
gnfcs/disturbance_estimator/: disturbance_estimator.py
gnfcs/dual_quaternion_kinematics/: dual_quaternion_kinematics.py
gnfcs/hybrid_controller/: hybrid_controller.py
gnfcs/hybrid_controller/test/: test_hybrid_controller.py
gnfcs/loss_function/: loss_function.py
gnfcs/model_parameter_adapter/: model_parameter_adapter.py
gnfcs/neural_network_policy/: neural_network_policy.py
gnfcs/state_estimator/: state_estimator.py
simulation/: SIMULATION.sh
simulation/python/: monte_carlo_runner.py  simulate_flight.py  simulation_results.json  simulation_samples.json
simulation/rust/: Cargo.toml
simulation/vio/: README.md  pose_stream_bridge.py  setup_360_vio_sandbox.sh
vidar/: CMakeLists.txt  run  vidar_perception.py
vidar/include/vidar/: vio_node.hpp
vidar/src/: orb_slam3_node.hpp  swarm_node.hpp  vins_node.hpp  vio_node.hpp
visualization/: INSTRUCTIONS.sh
(+47 files in other folders)
